[project]
name = "arceus"
version = "0.0.1"
authors = [
  { name="Gabe Velare", email="gvelarde@purdue.edu" },
]
description = "Automated electrical test bench characterization"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyvisa",
    "numpy",
    "pandas",
    "matplotlib",
    "pymeasure",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/gvelarde2/Arceus"
Issues = "https://github.com/gvelarde2/Arceus/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
